# birthday-telegram-bot

./: .gitignore  README.md  api_requests.py  birthday_bot.py  birthdaybot.py  birthdaybot_config.ini  birthdaybot_config_example.ini  birthdaybot_create_config.py  birthdaybot_log.txt  birthdaybot_v1.py  birthdaybot_v2.py  conf_en.ini  conf_ua.ini  config.py  create_language_config.py  flake.nix  import logging.py  language_config.py  pyproject.toml  request.py  test.py  test_2.py  transition_script.py
core/: api_requests.py  config.py  logger.py  schema.py
core/requests/: api_requests.py
handlers/: add.py  change.py  delete.py  fallback.py  list.py  reminder.py  start.py
src/: birthday_bot.py  birthdaybot_config_example.ini
src/core/: api_requests.py  config.py  logger.py  schema.py
src/handlers/: add.py  change.py  delete.py  fallback.py  list.py  reminder.py
