[project]
name = "birthday-telegram-bot"
version = "2.0.0-alpha"
description = ""
authors = [{ name = "orehzzz", email = "olegzzz749@gmail.com" }]
requires-python = "~=3.10.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "peewee>=3.17.1,<4",
    "python-telegram-bot[job-queue]~=20.8",
    "pytz~=2024.1",
    "psycopg2-binary>=2.9.9,<3",
    "requests>=2.31.0,<3",
    "cryptography>=39.0.1",
]

[dependency-groups]
dev = ["black>=24.2.0,<25"]

[project.scripts]
birthday-bot = "src.birthday_bot:main"

[build-system]
requires = ["uv_build>=0.9.3"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "src"
module-root = ""
